Added $ to view.

--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
@@ -40,10 +40,10 @@
                     <td>@(i+1)</td>
                     <td>@Model.StateNameList[@i]</td>
                     <td>@Model.Tax[@i]%</td>
-                    <td>@Model.PurchasePrice</td>
-                    <td>@Model.PreferredPrice</td>
-                    <td>@Model.FinalPrice[@i]</td>
-                    <td>@Model.Margin[@i]</td>
+                    <td>@Model.PurchasePrice$</td>
+                    <td>@Model.PreferredPrice$</td>
+                    <td>@Model.FinalPrice[@i]$</td>
+                    <td>@Model.Margin[@i]$</td>
                 </tr>
             }
             </thead>
