--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
@@ -30,8 +30,8 @@
                 <th scope="col">State</th>
                 <th scope="col">Tax</th>
                 <th scope="col">Purchase Price</th>
-                <th scope="col">Preferred Price (without tax)</th>
-                <th scope="col">Final Price (with tax)</th>
+                <th scope="col">Preferred Price (with tax)</th>
+                <th scope="col">Final Price (without tax)</th>
                 <th scope="col">Profit margin</th>
             </tr>
             @for (int i = 0; i < Model.StateNameList.Count; i++)
