--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
@@ -5,21 +5,64 @@
 
 <asp:DropDownList runat="server" CssClass="form-control" ID="something" />
 
-<div class="row" style="margin-top: 10px">
-    @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { @class="form-inline col-md-12", role="form" }))
-    { 
-        <div class="form-group">
-            <label class="" for="selectProduct">Product:</label>
-            @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new {@class = "form-control", @required = true})
-        </div>
-        <div class="form-group">
-            <input type="number" step="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required/>
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-default" value="Submit"/>
-        </div>
-    }
+
+<ul class="nav nav-tabs">
+    <li class="active"><a data-togle="tab" href="#byProduct">By product</a></li>
+    <li><a data-togle="tab" href="#byCategory">By category</a></li>
+    <li><a data-togle="tab" href="#byState">By state</a></li>
+</ul>
+
+<div class="tab-content">
+    <div id="byProduct" class="row tab-pane fade in active" style="margin-top: 10px">
+        @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { @class = "form-inline col-md-12", role = "form" }))
+        {
+            <div class="form-group">
+                <label class="" for="selectProduct">Product:</label>
+                @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @class = "form-control", @required = true })
+            </div>
+            <div class="form-group">
+                <input type="number" step="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-default" value="Submit" />
+            </div>
+        }
+    </div>
+
+    <div id="byCategory" class="row tab-pane fade" style="margin-top: 10px">
+        @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { @class = "form-inline col-md-12", role = "form" }))
+        {
+            <div class="form-group">
+                <label class="" for="selectProduct">Product:</label>
+                @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @class = "form-control", @required = true })
+            </div>
+            <div class="form-group">
+                <input type="number" step="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-default" value="Submit" />
+            </div>
+        }
+    </div>
+
+    <div id="byState" class="row tab-pane fade" style="margin-top: 10px">
+        @using (Html.BeginForm("Index", "Home", FormMethod.Post, new { @class = "form-inline col-md-12", role = "form" }))
+        {
+            <div class="form-group">
+                <label class="" for="selectProduct">Product:</label>
+                @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @class = "form-control", @required = true })
+            </div>
+            <div class="form-group">
+                <input type="number" step="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-default" value="Submit" />
+            </div>
+        }
+    </div>
+
 </div>
+
 @if (Model.ShowTable)
 {
     <div class="row" style="margin-top: 10px">
@@ -49,4 +92,13 @@
             </thead>
         </table>
     </div>
+}
+
+@section scripts
+{
+    <script>
+        $('.nav-tabs a').click(function(){
+            $(this).tab('show');
+        })
+    </script>
 }
