applied new material design
now using bootstrap 4.5
completely new "About" page
whole page is more responsive

--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Home/About.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Home/About.cshtml
@@ -1,7 +1,68 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p class="secondary-text-color">
+    This app is made for "Zarządzanie projektami informatycznymi" by group "Zoomers"
+</p>
+<p class="secondary-text-color">
+    Project's GitHub page: <a href="https://github.com/IIS-ZPI/ZPI_2020_zoomers">ZPI_2020_zoomers</a>
+</p>
+<div class="card-deck">
+    <div class="card light-primary-color">
+        <div class="card-body text-center">
+            <img src="~/Content/img/patryk.jpg" class="img-thumbnail avatar" /><br />
+            Patryk Lefik<br />
+            <span class="badge text-primary-color accent-color badge-pill">Leader</span>
+            <span class="badge badge-pill git-badge align-middle">
+                <a href="#">
+                    <span class="float-left"><img src="~/Content/img/GitHub-Mark-Light-120px-plus.png" style="width:3rem" /></span>
+                    <span class="float-none" style="line-height:2.5rem;">(hacked :c)</span>
+                </a>
+            </span>
+        </div>
+    </div>
+    <div class="card light-primary-color">
+        <div class="card-body text-center">
+            <img src="~/Content/img/kamil.jpg" class="img-thumbnail avatar" /><br />
+            Kamil Chrustowski<br />
+            <span class="badge text-primary-color accent-color badge-pill">Tester</span>
+            <span class="badge badge-pill git-badge align-middle">
+                <a href="https://github.com/uposledzony">
+                    <span class="float-left"><img src="~/Content/img/GitHub-Mark-Light-120px-plus.png" style="width:3rem" /></span>
+                    <span class="float-none" style="line-height:2.5rem;">uposledzony</span>
+                </a>
+            </span>
+        </div>
+    </div>
+    <div class="card light-primary-color">
+        <div class="card-body text-center">
+            <img src="~/Content/img/jan.jpg" class="img-thumbnail avatar" /><br />
+            Jan Jędrzejewski<br />
+            <span class="badge text-primary-color accent-color badge-pill">Programmer</span>
+
+            <span class="badge badge-pill git-badge align-middle">
+                <a href="https://github.com/Luvkitri">
+                    <span class="float-left"><img src="~/Content/img/GitHub-Mark-Light-120px-plus.png" style="width:3rem" /></span>
+                    <span class="float-none" style="line-height:2.5rem;">Luvkitri</span>
+                </a>
+            </span>
+        </div>
+    </div>
+    <div class="card light-primary-color">
+        <div class="card-body text-center">
+            <img src="~/Content/img/kombajno678.jpg" class="img-thumbnail avatar" /><br />
+            Adam Kowalczyk<br />
+            <span class="badge text-primary-color accent-color badge-pill">DevOps</span>
+
+            <span class="badge badge-pill git-badge align-middle">
+                <a href="https://github.com/kombajno678/">
+                    <span class="float-left"><img src="~/Content/img/GitHub-Mark-Light-120px-plus.png" style="width:3rem" /></span>
+                    <span class="float-none" style="line-height:2.5rem;">kombajno678</span>
+                </a>
+            </span>
+        </div>
+    </div>
+</div>
