--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model zpi_aspnet_test.Models.MainViewModel
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "American calculator";
 }
 
 <asp:DropDownList runat="server" CssClass="form-control" ID="something" />
