--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -17,10 +17,10 @@
                 <input type="number" step="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
             </div>
             <div class="form-group">
-                <input type="number" step="1" class="form-control" id="numberOfProducts" name="count" placeholder="Number Of Products" />
+                <input type="number" step="1" class="form-control" id="numberOfProducts" required name="count" placeholder="Number Of Products" />
             </div>
             <div class="form-group">
-                <input type="submit" class="btn btn-default" value="Submit" />
+                <input type="submit" class="btn btn-default" required value="Submit" />
             </div>
         }
     </div>
