Look of choose nav

--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -1,9 +1,9 @@
 ﻿@model zpi_aspnet_test.Models.MainViewModel
 
-<ul class="nav nav-tabs">
-    <li class="active"><a data-togle="tab" href="#byProduct">By product</a></li>
-    <li><a data-togle="tab" href="#byCategory">By category</a></li>
-    <li><a data-togle="tab" href="#byState">By state</a></li>
+<ul class="nav nav-tabs" >
+    <li class="nav-item"><a data-togle="tab" class="nav-link" href="#byProduct">By product</a></li>
+    <li class="nav-item"><a data-togle="tab" class="nav-link" href="#byCategory">By category</a></li>
+    <li class="nav-item"><a data-togle="tab" class="nav-link" href="#byState">By state</a></li>
 </ul>
 
 <div class="tab-content">
