--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Home/About.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Home/About.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title</h2>
+<h3>@ViewBag.Message</h3>
 
 <p>
     Our app is a system which allows to unify goods sales in the United States of America. Application contains:
