--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -14,7 +14,7 @@
                 @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @id = "selectProduct", @class = "form-control", @required = true })
             </div>
             <div class="form-group">
-                <input type="number"  pattern="(^\d+(\.|\,\d{2})?)" step="0.01" min="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
+                <input type="text"  pattern="(^\d+(\.|\,\d{2})?)" step="0.01" min="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
             </div>
             <div class="form-group">
                 <input type="number" step="1" min="1" class="form-control" id="numberOfProducts" name="count" placeholder="Number Of Products" required />
