--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -14,10 +14,10 @@
                 @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @id = "selectProduct", @class = "form-control", @required = true })
             </div>
             <div class="form-group">
-                <input type="number" step="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
+                <input type="number" step="0.01" class="target form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
             </div>
             <div class="form-group">
-                <input type="number" step="1" class="form-control" id="numberOfProducts" required name="count" placeholder="Number Of Products" />
+                <input type="number" step="1" class="target form-control" id="numberOfProducts" required name="count" placeholder="Number Of Products" />
             </div>
             <div class="form-group">
                 <input type="submit" class="btn btn-default" required value="Submit" />
@@ -47,10 +47,10 @@
                 @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @id = "selectCategory", @class = "form-control", @required = true })
             </div>
             <div class="form-group">
-                <input type="number" step="0.01" class="form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
+                <input type="number" step="0.01" class="target form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
             </div>
             <div class="form-group">
-                <input type="number" step="1" class="form-control" id="numberOfProducts" name="count" placeholder="Number Of Products" />
+                <input type="number" step="1" class="target form-control" id="numberOfProducts" name="count" placeholder="Number Of Products" />
             </div>
             <div class="form-group">
                 <input type="submit" class="btn btn-default" value="Submit" />
