--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Home/Index.cshtml
@@ -13,26 +13,36 @@
         var currentTab;
 
         $(document).ready(function() {
-            $(".target").on('keyup mouseup',
-                function() {
+            $(".targetRegex").on('change', function () {
+                var value = this.value;
+                var regex = new RegExp(this.pattern);
+
+                console.log(value);
+                console.log(regex);
+
+                if (!regex.test(value)) {
+                    $(this).css({ 'background-color': 'lightcoral' });
+                    $(':input[type="submit"]').prop('disabled', true);
+                } else {
+                    $(':input[type="submit"]').prop('disabled', false);
+                }
+            });
+
+            $(".target").on('keyup mouseup', function () {
                     if (this.value < 0) {
                         $(this).css({ 'background-color': 'lightcoral' });
                         $(':input[type="submit"]').prop('disabled', true);
                     } else {
                         $(this).css({ 'background-color': 'white' });
-
                         var currentTabId = window.location.hash.replace('#', '');
-
                         var targetInputs = document.getElementById(currentTabId).getElementsByClassName('target');
                         var isDisabled = false;
-
                         $.each(targetInputs,
                             function (index, input) {
                                 if (input.value < 0) {
                                     isDisabled = true;
                                 }
                             });
-
                         $(':input[type="submit"]').prop('disabled', isDisabled);
                     }
                 });
