--- a/zpi_aspnet_test/zpi_aspnet_test/Views/ProductSelection/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/ProductSelection/Index.cshtml
@@ -22,16 +22,16 @@
         </tr>
         @for (int i = 0; i < Model.StateNameList.Count; i++)
         {
-            <tr>
-                <td>@(i+1)</td>
-                <td>@Model.StateNameList[@i]</td>
-                <td>@Model.Tax[@i]%</td>
-                <td>@Model.NumberOfProducts</td>
-                <td>@(Model.PurchasePrice * Model.NumberOfProducts)$</td>
-                <td>@(Model.PreferredPrice * Model.NumberOfProducts)$</td>
-                <td>@Model.FinalPrice[@i]$</td>
-                <td>@Model.Margin[@i]$</td>
-            </tr>
+        <tr>
+            <td>@(i + 1)</td>
+            <td>@Model.StateNameList[@i]</td>
+            <td>@Model.Tax[@i]%</td>
+            <td>@Model.NumberOfProducts</td>
+            <td>@(Model.PurchasePrice * Model.NumberOfProducts)$</td>
+            <td>@(String.Format("{0:0.00}", Model.PreferredPrice * Model.NumberOfProducts))$</td>
+            <td>@Model.FinalPrice[@i]$</td>
+            <td>@Model.Margin[@i]$</td>
+        </tr>
         }
         </thead>
     </table>
