--- a/zpi_aspnet_test/zpi_aspnet_test/Views/StateSelection/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/StateSelection/Index.cshtml
@@ -25,7 +25,7 @@
                 <td>@Model.Tax[0]%</td>
                 <td>@Model.NumberOfProducts</td>
                 <td>@(Model.PurchasePrice * Model.NumberOfProducts)$</td>
-                <td>@(Model.PreferredPrice * Model.NumberOfProducts)$</td>
+                <td>@(String.Format("{0:0.00}", Model.PreferredPrice * Model.NumberOfProducts))$</td>
                 <td>@Model.FinalPrice[0]$</td>
                 <td>@Model.Margin[0]$</td>
 
