dollar sign is now before price value (the correct way)

--- a/zpi_aspnet_test/zpi_aspnet_test/Views/CategorySelection/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/CategorySelection/Index.cshtml
@@ -22,7 +22,7 @@
                 <td>@(i+1)</td>
                 <td>@Model.Category</td>
                 <td>@Model.ProductList[i].Name</td>
-                <td>@Math.Round(Model.ProductList[i].PurchasePrice, 2)$</td>
+                <td>$@Math.Round(Model.ProductList[i].PurchasePrice, 2)</td>
             </tr>
         }
         </thead>
