--- a/zpi_aspnet_test/zpi_aspnet_test/Views/ProductSelection/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/ProductSelection/Index.cshtml
@@ -27,10 +27,10 @@
             <td>@Model.StateNameList[@i]</td>
             <td>@Model.Tax[@i]%</td>
             <td>@Model.NumberOfProducts</td>
-            <td>@(Model.PurchasePrice * Model.NumberOfProducts)$</td>
-            <td>@(String.Format("{0:0.00}", Model.PreferredPrice * Model.NumberOfProducts))$</td>
-            <td>@Model.FinalPrice[@i]$</td>
-            <td>@Model.Margin[@i]$</td>
+            <td>$@(Model.PurchasePrice * Model.NumberOfProducts)</td>
+            <td>$@(String.Format("{0:0.00}", Model.PreferredPrice * Model.NumberOfProducts))</td>
+            <td>$@Model.FinalPrice[@i]</td>
+            <td>$@Model.Margin[@i]</td>
         </tr>
         }
         </thead>
