--- a/zpi_aspnet_test/zpi_aspnet_test/Views/ProductSelection/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/ProductSelection/Index.cshtml
@@ -25,7 +25,7 @@
         <tr>
             <td>@(i + 1)</td>
             <td>@Model.StateNameList[@i]</td>
-            <td>@Model.Tax[@i]%</td>
+            <td>@String.Format("{0:0.00}", Model.Tax[@i])%</td>
             <td>@Model.NumberOfProducts</td>
             <td>$@(Model.PurchasePrice * Model.NumberOfProducts)</td>
             <td>$@(String.Format("{0:0.00}", Model.PreferredPrice * Model.NumberOfProducts))</td>
