--- a/zpi_aspnet_test/zpi_aspnet_test/Views/StateSelection/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/StateSelection/Index.cshtml
@@ -22,7 +22,7 @@
             <tr>
                 <td>@Model.ChosenState.Name</td>
                 <td>@Model.ChosenProduct.Name</td>
-                <td>@Model.Tax[0]%</td>
+                <td>@String.Format("{0:0.00}", Model.Tax[0])%</td>
                 <td>@Model.NumberOfProducts</td>
                 <td>$@(Model.PurchasePrice * Model.NumberOfProducts)</td>
                 <td>$@(String.Format("{0:0.00}", Model.PreferredPrice * Model.NumberOfProducts))</td>
