Added ErrorViewModel, moved MainViewModel to ViewModels namespace

--- a/zpi_aspnet_test/zpi_aspnet_test/Views/CategorySelection/Index.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/CategorySelection/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model zpi_aspnet_test.Models.MainViewModel
+﻿@model zpi_aspnet_test.ViewModels.MainViewModel
 @{
     ViewBag.Title = "Category Selection";
 }
