--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -1,4 +1,4 @@
-﻿@model zpi_aspnet_test.Models.MainViewModel
+﻿@model zpi_aspnet_test.ViewModels.MainViewModel
 
 <ul class="nav nav-tabs" >
     <li class="nav-item"><a data-togle="tab" class="nav-link" href="#byProduct">By product</a></li>
