Hotfix - fixed a bug where tab was already active on first open, but no content was seen.

--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -7,7 +7,7 @@
 </ul>
 
 <div class="tab-content">
-    <div id="byProduct" class="row tab-pane fade in active" style="margin-top: 10px">
+    <div id="byProduct" class="row tab-pane fade in" style="margin-top: 10px">
         @using (Html.BeginForm("Index", "ProductSelection", FormMethod.Post, new { @class = "form-inline col-md-12", role = "form" }))
         {
             <div class="form-group">
