--- a/zpi_aspnet_test/zpi_aspnet_test/Content/Site.css
+++ b/zpi_aspnet_test/zpi_aspnet_test/Content/Site.css
@@ -102,3 +102,20 @@ textarea {
     border-color: #03A9F4;
     background-color: #03A9F4;
 }
+
+
+
+@media screen and (max-width: 768px) {
+    .form-group {
+        width: 100%;
+        min-width: 100%;
+        margin-top: 0;
+    }
+    .form-control{
+        max-width:100%;
+    }
+    .btn-default{
+        width:100%;
+        max-width:100%;
+    }
+}
