--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -7,52 +7,55 @@
 </ul>
 
 <div class="tab-content">
+    <div id="default" class="row tab-pane fade in active " style="margin-top: 10px; padding-left:30px; opacity: 0.5">
+        Choose how you want to calculate prices
+    </div>
     <div id="byProduct" class="row tab-pane fade in" style="margin-top: 10px">
-        @using (Html.BeginForm("Index", "ProductSelection", FormMethod.Post, new { @class = "form-inline col-md-12", role = "form" }))
+        @using (Html.BeginForm("Index", "ProductSelection", FormMethod.Post, new { @class = "form-row col-md-12", role = "form" }))
         {
-            <div class="form-group">
+            <div class="form-group col-12 col-md-4 col-lg-3 col-xl-2">
                 @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @id = "selectProduct", @class = "form-control", @required = true })
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-3 col-lg-3 col-xl-2">
                 <input type="text"  pattern="(^\d+([,.]\d+)*?)" step="0.01" min="0.01" class="target targetRegex form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-4 col-lg-3 col-xl-2">
                 <input type="number" step="1" min="1" class="target form-control" id="numberOfProducts" name="count" placeholder="Number Of Products" required />
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-1 col-lg-3 col-xl-2">
                 <input type="submit" class="btn btn-default" value="Submit" />
             </div>
         }
     </div>
 
     <div id="byCategory" class="row tab-pane fade" style="margin-top: 10px">
-        @using (Html.BeginForm("Index", "CategorySelection", FormMethod.Post, new { @class = "form-inline col-md-12", role = "form" }))
+        @using (Html.BeginForm("Index", "CategorySelection", FormMethod.Post, new { @class = "form-row col-md-12", role = "form" }))
         {
-            <div class="form-group">
+            <div class="form-group col-12 col-md-4 col-lg-3 col-xl-3">
                 @Html.DropDownList("category", Model.CategorySelectList, "Select Category", new { @id = "selectCategory", @class = "form-control", @required = true })
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-1 col-xl-1">
                 <input type="submit" class="btn btn-default" value="Submit" />
             </div>
         }
     </div>
 
     <div id="byState" class="row tab-pane fade" style="margin-top: 10px">
-        @using (Html.BeginForm("Index", "StateSelection", FormMethod.Post, new { @class = "form-inline col-md-12", role = "form" }))
+        @using (Html.BeginForm("Index", "StateSelection", FormMethod.Post, new { @class = "form-row col-md-12", role = "form" }))
         {
-            <div class="form-group">
+            <div class="form-group col-12 col-md-2 col-xl-2">
                 @Html.DropDownList("state", Model.StateSelectList, "Select State", new { @id = "selectState", @class = "form-control", @required = true })
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-2 col-xl-2">
                 @Html.DropDownList("product", Model.ProductSelectList, "Select Product", new { @id = "selectCategory", @class = "form-control", @required = true })
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-3 col-xl-2">
                 <input type="text" pattern="(^\d+([,.]\d+)*?)" step="0.01" min="0.01" class="target targetRegex form-control" id="priceInput" name="preferredPriceInput" placeholder="Preferred Price" required />
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-3 col-xl-2">
                 <input type="number" step="1" min="1" class="target form-control" id="numberOfProducts" name="count" placeholder="Number Of Products" required />
             </div>
-            <div class="form-group">
+            <div class="form-group col-12 col-md-2 col-xl-2">
                 <input type="submit" class="btn btn-default" value="Submit" />
             </div>
         }
