fix-responsivness_on_smartphone

--- a/zpi_aspnet_test/zpi_aspnet_test/Content/Site.css
+++ b/zpi_aspnet_test/zpi_aspnet_test/Content/Site.css
@@ -122,4 +122,27 @@ textarea {
         width:100%;
         max-width:100%;
     }
+
+
+    .tab-title {
+        padding-left: 1px;
+        padding-right: 1px;
+    }
+    .tab-title .nav-link {
+        padding-right: 1px;
+    }
 }
+@media screen and (max-width: 403px) {
+    .tab-title{
+        width:100%;
+        font-size:0.8rem;
+    }
+}
+@media screen and (max-width: 380px) {
+    .tab-title {
+        width: 100%;
+        font-size: 0.7rem;
+    }
+}
+
+    
