--- a/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
+++ b/zpi_aspnet_test/zpi_aspnet_test/Views/Shared/_FormsView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model zpi_aspnet_test.ViewModels.MainViewModel
 
 <ul class="nav nav-tabs" >
-    <li class="nav-item">
+    <li class="nav-item col-4 col-sm-4 col-md-4 col-lg-3 tab-title">
         <a data-togle="tab" class="nav-link" href="#byProduct">
             <span class="material-icons icon-sm">
                 store_mall_directory
@@ -9,7 +9,7 @@
             By product
         </a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item col-4 col-sm-4 col-md-4 col-lg-3 tab-title">
         <a data-togle="tab" class="nav-link" href="#byCategory">
 
             <span class="material-icons icon-sm">
@@ -18,7 +18,7 @@
             By category
         </a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item col-4 col-sm-4 col-md-4 col-lg-3 tab-title">
         <a data-togle="tab" class="nav-link" href="#byState">
 
             <span class="material-icons icon-sm">
